--- a/index.css
+++ b/index.css
@@ -99,6 +99,7 @@ button:disabled {
     background-color: rgba(255,255,255,.2);
     border-radius: 3rem;
     align-self: center;
+    padding:20px;
 }
 
 .box2{
