--- a/index.css
+++ b/index.css
@@ -94,12 +94,16 @@ button:disabled {
 }
 
 .box1{
+    display: flex;
+    flex-direction: column;
     height: 40vh;
-    width: 80vw;
+    width: 90vw;
     background-color: rgba(255,255,255,.2);
     border-radius: 3rem;
     align-self: center;
-    padding:20px;
+    align-self: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .box2{
